ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: example-ingress

spec:

  rules:

  - host: "foo.bar.com"

    http:

      paths:

      - pathType: Prefix

        path: /sample-1

        backend:

          service:

            name: path1

            port:

              number: 3000

  - host: "foo.bar.com"

    http:

      paths:

      - pathType: Prefix

        path: /sample-2

        backend:

          service:

            name: path2

            port:

              number: 3000
